--- a/FirstApp/src/main/res/values/strings.xml
+++ b/FirstApp/src/main/res/values/strings.xml
@@ -5,5 +5,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_display_message">My Message</string>
+    <string name="button_send">send</string>
+    <string name="edit_message">type text here</string>
 
 </resources>
